--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "MERN Stack Boilerplate",
   "main": "index.js",
   "scripts": {
+    "client:dev": "cd client && npm run start",
+    "client:build": "cd client && npm run build && cd ..",
     "server:dev": "cd server && npm run dev",
     "server:prod": "cd server && npm run start",
+    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
+    "prod": "npm run client:build && npm run server:prod",
     "lint": "eslint \"**/src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint --fix \"**/src/**/*.{ts,tsx}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
